test/libsolidity/syntaxTests/constants/redefinition_public_constant.sol
uint constant c = 7;
uint constant c = 8;
// ----
// DeclarationError 2333: (21-40): Identifier already declared.
